--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -49,7 +49,7 @@
                     android:layout_margin="5dp"
                     android:textSize="8dp">
 
-                    <AutoCompleteTextView
+                    <com.perrygarg.khanapeena.common.util.DelayAutocompleteTextView
                         android:id="@+id/train"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
