--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -71,39 +71,11 @@
 
                 </FrameLayout>
 
-                <android.support.design.widget.TextInputLayout xmlns:app="http://schemas.android.com/apk/res-auto"
+                <android.support.v7.widget.AppCompatSpinner
+                    android:id="@+id/meal_stations"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="5dp"
-                    android:textSize="8dp">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:padding="2dp"
-                        android:weightSum="1">
-
-                        <AutoCompleteTextView
-                            android:id="@+id/meal_station"
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_vertical"
-                            android:layout_weight="1"
-                            android:hint="@string/meal_station"
-                            android:singleLine="true"
-                            android:textSize="14dp" />
-
-                        <ProgressBar
-                            android:id="@+id/meal_station_progress_bar"
-                            android:layout_width="30dp"
-                            android:layout_gravity="center_vertical"
-                            android:layout_height="30dp"
-                            android:visibility="invisible" />
-
-                    </LinearLayout>
-
-                </android.support.design.widget.TextInputLayout>
+                    android:layout_marginTop="@dimen/margin_left_home"/>
 
                 <android.support.design.widget.TextInputLayout xmlns:app="http://schemas.android.com/apk/res-auto"
                     android:layout_width="match_parent"
