--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -17,6 +17,14 @@
         android:gravity="center_horizontal"
         android:orientation="vertical">
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:gravity="center"
+            android:text="@string/header_text"
+            android:textSize="16dp" />
+
         <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:card_view="http://schemas.android.com/apk/res-auto"
             android:id="@+id/cardViewFirst"
@@ -25,7 +33,6 @@
             android:layout_marginBottom="20dp"
             android:layout_marginLeft="@dimen/margin_left_home"
             android:layout_marginRight="@dimen/margin_left_home"
-            android:layout_marginTop="@dimen/activity_vertical_margin"
             card_view:cardCornerRadius="@dimen/margin_left_home"
             card_view:cardElevation="6dp"
             card_view:contentPadding="15dp">
@@ -35,14 +42,6 @@
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
                 android:orientation="vertical">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="20dp"
-                    android:gravity="center"
-                    android:text="@string/header_text"
-                    android:textSize="16dp" />
 
                 <FrameLayout android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -72,12 +71,6 @@
 
                 </FrameLayout>
 
-                <android.support.v7.widget.AppCompatSpinner
-                    android:id="@+id/meal_stations"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/activity_vertical_margin" />
-
                 <EditText
                     android:id="@+id/date_picker_edit_text"
                     android:layout_width="match_parent"
@@ -90,44 +83,72 @@
                     android:editable="false"
                     android:hint="Tap to choose journey date"/>
 
-                <Button
-                    android:id="@+id/proceed_button"
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_margin="10dp"
+                    android:textStyle="bold"
+                    android:text="OR"/>
+
+                <EditText
+                    android:id="@+id/pnr_number_edit_text"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="10dp"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginRight="20dp"
-                    android:layout_marginTop="@dimen/activity_vertical_margin"
-                    android:background="@drawable/selector__button_proceed"
-                    android:gravity="center"
-                    android:text="@string/proceed"
-                    android:textColor="@android:color/white"
-                    android:textSize="14dp" />
+                    android:clickable="true"
+                    android:textSize="14dp"
+                    android:layout_marginTop="@dimen/margin_left_home"
+                    android:focusable="false"
+                    android:focusableInTouchMode="false"
+                    android:editable="false"
+                    android:hint="Enter PNR number"/>
+
                 <!-- <include
                      android:id="@+id/proceedLayout"
                      layout="@layout/custom_button" />-->
             </LinearLayout>
         </android.support.v7.widget.CardView>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="OR"/>
-
         <android.support.v7.widget.CardView
             xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:card_view="http://schemas.android.com/apk/res-auto"
             android:id="@+id/cardViewSecond"
             android:layout_width="match_parent"
-            android:layout_height="80dp"
+            android:layout_height="wrap_content"
             android:layout_marginBottom="20dp"
-            android:layout_marginTop="20dp"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             card_view:cardCornerRadius="10dp"
             card_view:cardElevation="6dp"
             card_view:contentPadding="15dp">
+
+            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:orientation="vertical">
+
+            <android.support.v7.widget.AppCompatSpinner
+                android:id="@+id/meal_stations"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/activity_vertical_margin" />
+
+            <Button
+                android:id="@+id/proceed_button"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginTop="@dimen/activity_vertical_margin"
+                android:background="@drawable/selector__button_proceed"
+                android:gravity="center"
+                android:text="@string/proceed"
+                android:textColor="@android:color/white"
+                android:textSize="14dp" />
+
+            </LinearLayout>
 
         </android.support.v7.widget.CardView>
 
