--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,7 +12,7 @@
     <color name="line_color">#2b000000</color>
     <color name="dividerColor">#56b6b6b6</color>
 
-    <color name="mdtp_date_picker_text_highlighted">#303F9F</color>
+    <color name="perry">#bb2917</color>
 
     <color name="vlackkk">#7f000000</color>0
     <color name="textColor">#3F51B5</color>
